force-app/main/default/objects/Noncredit_Invoice_Line_Item__c/Noncredit_Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Noncredit Invoice Line Item</description>
    <label>Noncredit Invoice Line Item</label>
    <nameField>
        <displayFormat>NCLI-{000000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Noncredit Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>