force-app/main/default/objects/Noncredit_Invoice_Line_Item__c/fields/Canvas_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Canvas_Enrollment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Canvas Enrollment</description>
    <label>Canvas Enrollment</label>
    <referenceTo>lms_hed__LMS_Course_Enrollment__c</referenceTo>
    <relationshipLabel>Noncredit Invoice Line Items</relationshipLabel>
    <relationshipName>Noncredit_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>