force-app/main/default/objects/Noncredit_Invoice_Line_Item__c/fields/Confirmed_At__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_At__c</fullName>
    <description>When was this line item confirmed?</description>
    <inlineHelpText>When was this line item confirmed?</inlineHelpText>
    <label>Confirmed At</label>
    <type>DateTime</type>
</CustomField>