force-app/main/default/objects/Noncredit_Invoice_Line_Item__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <description>Name of the Course on the line item.</description>
    <formula>Course_Offering__r.hed__Course__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of the Course on the line item.</inlineHelpText>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>