force-app/main/default/objects/Noncredit_Invoice_Line_Item__c/fields/Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The course offering that this payment was made against.</description>
    <inlineHelpText>The course offering that this payment was made against.</inlineHelpText>
    <label>Course Offering</label>
    <referenceTo>hed__Course_Offering__c</referenceTo>
    <relationshipLabel>Noncredit Invoice Line Items</relationshipLabel>
    <relationshipName>Noncredit_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>