force-app/main/default/objects/Noncredit_Invoice_Line_Item__c/fields/Debit_Trans_Id__c.field-meta.xml
<CustomField>
    <fullName>Debit_Trans_Id__c</fullName>
    <description>CSU Trans Id for a debit payment this line item represents.</description>
    <externalId>true</externalId>
    <inlineHelpText>CSU Trans Id for a debit payment this line item represents.</inlineHelpText>
    <label>Debit Trans Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>