force-app/main/default/objects/Noncredit_Invoice_Line_Item__c/fields/Fulfilled_At__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_At__c</fullName>
    <description>When the LMS Enrollment was found.</description>
    <inlineHelpText>When the LMS Enrollment was found.</inlineHelpText>
    <label>Fulfilled At</label>
    <type>DateTime</type>
</CustomField>