force-app/main/default/objects/Noncredit_Invoice_Line_Item__c/fields/Is_Actual__c.field-meta.xml
<CustomField>
    <fullName>Is_Actual__c</fullName>
    <description>Is an actual debit - not a result of a credit transfer.</description>
    <formula>ISBLANK(Sponsor_Payment_Invoice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is an actual debit - not a result of a credit transfer.</inlineHelpText>
    <label>Is Actual</label>
    <type>Checkbox</type>
</CustomField>