force-app/main/default/objects/Noncredit_Invoice_Line_Item__c/fields/Is_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Is_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if a &quot;Confirmed&quot; event has come through for this line item.</description>
    <inlineHelpText>True if a &quot;Confirmed&quot; event has come through for this line item.</inlineHelpText>
    <label>Is Confirmed</label>
    <type>Checkbox</type>
</CustomField>