force-app/main/default/objects/Noncredit_Invoice_Line_Item__c/fields/Is_Credit_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Is_Credit_Line_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if a credit line item.</description>
    <inlineHelpText>Checked if a credit line item.</inlineHelpText>
    <label>Is Credit Line Item</label>
    <type>Checkbox</type>
</CustomField>