force-app/main/default/objects/Noncredit_Invoice_Line_Item__c/fields/Is_Dropped__c.field-meta.xml
<CustomField>
    <fullName>Is_Dropped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if line item has been dropped.</description>
    <inlineHelpText>True if line item has been dropped.</inlineHelpText>
    <label>Is Dropped</label>
    <type>Checkbox</type>
</CustomField>