force-app/main/default/objects/Noncredit_Invoice_Line_Item__c/fields/Is_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Is_Fulfilled__c</fullName>
    <description>Marked fulfilled if a LMS Course Enrollment exists for this line item.</description>
    <formula>AND(Requires_LMS_Fulfillment__c,NOT(Canvas_Enrollment__c == &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Marked fulfilled if a LMS Course Enrollment exists for this line item.</inlineHelpText>
    <label>Is Fulfilled</label>
    <type>Checkbox</type>
</CustomField>