force-app/main/default/objects/Noncredit_Invoice_Line_Item__c/fields/Is_Open_Entry_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Is_Open_Entry_Line_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the line item is for an open entry course.</description>
    <inlineHelpText>True if the line item is for an open entry course.</inlineHelpText>
    <label>Is Open Entry Line Item</label>
    <type>Checkbox</type>
</CustomField>