force-app/main/default/objects/Noncredit_Invoice_Line_Item__c/fields/Is_Voided__c.field-meta.xml
<CustomField>
    <fullName>Is_Voided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if line item has been voided.</description>
    <inlineHelpText>True if line item has been voided.</inlineHelpText>
    <label>Is Voided</label>
    <type>Checkbox</type>
</CustomField>