force-app/main/default/objects/Noncredit_Invoice_Line_Item__c/fields/Line_Item_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Amount__c</fullName>
    <description>Amount for the line item itself.</description>
    <inlineHelpText>Amount for the line item itself.</inlineHelpText>
    <label>Line Item Amount</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>