force-app/main/default/objects/Noncredit_Invoice_Line_Item__c/fields/Line_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_ID__c</fullName>
    <description>External line item ID for upserts.</description>
    <externalId>true</externalId>
    <label>Line Item ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>