force-app/main/default/objects/Noncredit_Invoice_Line_Item__c/fields/Noncredit_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Noncredit_Invoice__c</fullName>
    <description>Invoice this line item is on.</description>
    <inlineHelpText>Invoice this line item is on.</inlineHelpText>
    <label>Noncredit Invoice</label>
    <referenceTo>Noncredit_Invoice__c</referenceTo>
    <relationshipLabel>Noncredit Invoice Line Items</relationshipLabel>
    <relationshipName>Noncredit_Invoice_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>