force-app/main/default/objects/Noncredit_Invoice_Line_Item__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Field for ad-hoc notes.</description>
    <inlineHelpText>Field for ad-hoc notes.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>