force-app/main/default/objects/Noncredit_Invoice_Line_Item__c/fields/Requires_LMS_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Requires_LMS_Fulfillment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if an enrollment requires LMS updates (Canvas).</description>
    <inlineHelpText>True if an enrollment requires LMS updates (Canvas).</inlineHelpText>
    <label>Requires LMS Fulfillment</label>
    <type>Checkbox</type>
</CustomField>