force-app/main/default/objects/Noncredit_Invoice_Line_Item__c/fields/Section_Reference__c.field-meta.xml
<CustomField>
    <fullName>Section_Reference__c</fullName>
    <description>Reference of the section this line item is referring to. Acts as a product id of sorts.</description>
    <inlineHelpText>Reference of the section this line item is referring to. Acts as a product id of sorts.</inlineHelpText>
    <label>Section Reference</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>