force-app/main/default/objects/Noncredit_Invoice_Line_Item__c/fields/Sponsor_Payment_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Payment_Invoice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Invoice that this line item is paying for - e.g. sponsor payment is adding $100 toward another invoice, then this line item should be $100.</description>
    <inlineHelpText>Invoice that this line item is paying for - e.g. sponsor payment is adding $100 toward another invoice, then this line item should be $100.</inlineHelpText>
    <label>Sponsor Payment Invoice</label>
    <referenceTo>Noncredit_Invoice__c</referenceTo>
    <relationshipLabel>Noncredit Invoice Line Items (Sponsor Payment Invoice)</relationshipLabel>
    <relationshipName>Sponsoring_Debit</relationshipName>
    <type>Lookup</type>
</CustomField>